# Arbor

./: .gitignore  Cargo.toml  LICENSE  README.md  deployment.json  wrangler.toml
.github/workflows/: ci.yml
contracts/arbiter/: Cargo.toml
contracts/arbiter/src/: lib.rs  test.rs
contracts/escrow/: Cargo.toml
contracts/escrow/src/: lib.rs  test.rs
frontend/: .env.local.example  package-lock.json  package.json  tailwind.config.ts  vitest.config.ts
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/arbiter/: page.tsx
frontend/app/create/: page.tsx
frontend/app/escrow/: page.tsx
frontend/components/: ErrorStates.tsx  EscrowCard.tsx  MilestoneCard.tsx  NavBar.tsx  Skeletons.tsx  StampBadge.tsx  TxStatus.tsx
frontend/lib/: WalletContext.tsx  api.ts  contract.ts  decode.test.ts  decode.ts  env.ts  format.test.ts  format.ts  types.ts  wallet.ts
