[package]
name = "escrow"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
soroban-sdk = "22.0.0"
arbiter = { path = "../arbiter" }

[dev-dependencies]
soroban-sdk = { version = "22.0.0", features = ["testutils"] }
arbiter = { path = "../arbiter", features = ["testutils"] }

[features]
testutils = ["soroban-sdk/testutils"]
